Fixed spacing of search page

--- a/css/search.css
+++ b/css/search.css
@@ -33,3 +33,8 @@ ul{
 	width: 100%;
 	font-size: 20px;
 }
+
+hr {
+	margin-bottom: 30px;
+	margin-top: 30px;
+}
